--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
-    "expo": "~53.0.22",
-    "expo-status-bar": "~2.2.3",
+    "clsx": "^2.1.1",
+    "expo": "^53.0.20",
+    "expo-status-bar": "^2.2.3",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "react-native": "^0.81.1",
+    "react-native-edge-to-edge": "1.6.0",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.4",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@babel/core": "^7.28.3",
+    "@babel/runtime": "^7.28.3",
+    "@types/react": "^19.1.12",
     "babel-plugin-module-resolver": "^5.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3"
+    "typescript": "^5.9.2"
   },
   "private": true
 }
