--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "expo-checkbox": "~4.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
